--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.3",
     "recharts": "2.15.4",
     "sonner": "^2.0.6",
