--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-highlight": "^3.1.0",
+    "@tiptap/extension-text-align": "^3.1.0",
+    "@tiptap/react": "^3.1.0",
+    "@tiptap/starter-kit": "^3.1.0",
     "@types/gsap": "^3.0.0",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
@@ -54,13 +60,16 @@
     "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.4",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
     "vaul": "^1.1.2",
