--- a/package.json
+++ b/package.json
@@ -45,17 +45,21 @@
     "@tiptap/extension-text-align": "^3.1.0",
     "@tiptap/react": "^3.1.0",
     "@tiptap/starter-kit": "^3.1.0",
+    "@tremor/react": "^3.18.7",
     "@types/gsap": "^3.0.0",
+    "@types/jalaali-js": "^1.2.0",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "colorthief": "^2.6.0",
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
+    "jalaali-js": "^1.2.8",
     "lucide-react": "^0.532.0",
     "next": "^15.4.6",
     "next-themes": "^0.4.6",
