--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.4",
     "recharts": "2.15.4",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
