--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prebuild": "npx prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.13.0",
