--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@aws-sdk/client-s3": "^3.864.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.1",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -55,6 +55,7 @@
     "cmdk": "^1.1.1",
     "colorthief": "^2.6.0",
     "date-fns": "^4.1.0",
+    "date-fns-jalali": "^4.1.0-0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
@@ -89,7 +90,7 @@
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.33.0",
     "eslint-config-next": "15.4.4",
-    "prisma": "^6.13.0",
+    "prisma": "^6.14.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.9.2"
