--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lucide-react": "^0.532.0",
     "next": "^15.4.6",
     "next-themes": "^0.4.6",
+    "query-string": "^9.2.2",
     "react": "^19.1.1",
     "react-colorful": "^5.6.1",
     "react-day-picker": "^9.8.1",
