--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
     "vaul": "^1.1.2",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
