--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
     "query-string": "^9.2.2",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-colorful": "^5.6.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "react-image-crop": "^11.0.10",
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.5",
     "react-responsive": "^10.0.1",
