--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-image-crop": "^11.0.10",
+    "react-medium-image-zoom": "^5.3.0",
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.5",
     "react-responsive": "^10.0.1",
