--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^3.0.5",
     "react-responsive": "^10.0.1",
+    "react-use-measure": "^2.1.7",
     "recharts": "2.15.4",
     "slugify": "^1.6.6",
     "sonner": "^2.0.7",
