--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lucide-react": "^0.532.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
+    "next-view-transitions": "^0.3.4",
     "query-string": "^9.2.2",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
