--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.876.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.1",
+    "@paypal/react-paypal-js": "^8.9.1",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -40,6 +41,8 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@stripe/react-stripe-js": "^4.0.0",
+    "@stripe/stripe-js": "^7.9.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-highlight": "^3.3.0",
@@ -84,6 +87,7 @@
     "recharts": "2.15.4",
     "slugify": "^1.6.6",
     "sonner": "^2.0.7",
+    "stripe": "^18.5.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
