--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
     "@tremor/react": "^3.18.7",
+    "@types/color-namer": "^1.3.3",
     "@types/gsap": "^3.0.0",
     "@types/jalaali-js": "^1.2.0",
     "@types/zarinpal-checkout": "^0.2.5",
@@ -57,6 +58,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "color-namer": "^1.4.0",
     "colorthief": "^2.6.0",
     "date-fns": "^4.1.0",
     "date-fns-jalali": "^4.1.0-0",
